progress on the thing

--- a/index.html
+++ b/index.html
@@ -1,18 +1,47 @@
 <!DOCTYPE html>
+
+<!--
+
+        palette: #080808, #222222, #616161, #aaaaaa, #ececec
+
+-->
+
 <html>
     <head>
         <meta name="author" content="Joseph Ladino" />
         <meta name="description" content="My personal site, dunno what I'll use it" />
-        <title>Howdy, I'm Joey</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>My Dumb Projects</title>
         <link href="./mycon.ico" type="image/x-icon" rel="icon" />
         <link href="./style.css" type="text/css" rel="stylesheet" />
     </head>
     <body>
-        <div id="intro-container" class="c-wrap">
-            <h1 id="intro-header" class="fade-in">Hey</h1>
-            <div class="attrib-wrap">
-                <a class="attrib" href="https://www.pexels.com/@minan1398?utm_content=attributionCopyText&utm_medium=referral"><i>Moon and Stars</i> by Min An</a>
-            </div>
+        <div id="menu-bar" class="menu-closed">
+            <span id="menu-button">Menu</span>
+            <ul>
+                <li>nothing here yet...</li>
+            </ul>
         </div>
+        <div id="intro-container">
+            <h1 id="intro-header" class="fade-in">Hey</h1>
+        </div>
+        <div id="main-body">
+            <p>
+                My name's Joe and I program dumb things. On here you'll find my projects and an explanation as to why and how I made each one.
+                <br /> <br />
+                Quick warning: I don't write good code and most of it's quite messy.
+                <br /> <br />
+                Enjoy.
+            </p>
+        </div>
+        <div id="socials-container">
+            <a href="https://twitter.com/DumbPlusPlus" target="_blank" >
+                <img class="social-logo" src="./images/icons8-twitter.svg" alt="link to my twitter" />
+            </a>
+            <a href="https://github.com/Joseph-Ladino" target="_blank" >
+                <img class="social-logo" src="./images/icons8-github.svg" alt="link to my github" />
+            </a>
+        </div>
+        <script src="./script.js" type="text/javascript"></script>
     </body>
 </html>
